fixed a bug where project modal and sum stuff modal overlap each other on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   height: 100vh;
   overflow: hidden;
 }
-.sum-stuff::-webkit-scrollbar {
+.sum-stuff::-webkit-scrollbar, .project-modal-body::-webkit-scrollbar {
   background-color: transparent;
   display: none;
 }
